--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "schematized-config",
+  "author": "whacked",
+  "license": "MIT",
   "version": "0.0.1",
+  "repository": "https://github.com/whacked/schematized-config",
   "dependencies": {
     "@types/jest": "^27.0.1",
     "@types/json-schema": "^7.0.9",
@@ -17,6 +20,7 @@
     "ts-node-dev": "^1.1.8"
   },
   "scripts": {
-    "test": "ts-jest"
+    "test": "ts-jest",
+    "build": "tsc"
   }
 }
