--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
     "compilerOptions": {
+        "composite": true,
+        "declarationMap": true,
         "esModuleInterop": true,
         "resolveJsonModule": true,
+        "outDir": "dist",
         "jsx": "react"
     }
 }
