--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ajv": "^8.6.3",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
+    "json-schema-to-typescript": "^10.1.5",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
