--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,9 @@
         "resolveJsonModule": true,
         "outDir": "dist",
         "jsx": "react"
-    }
+    },
+    "include": [
+        "src/**/*",
+        "src/**/*.json"
+    ]
 }
