--- a/package.json
+++ b/package.json
@@ -5,20 +5,24 @@
   "version": "0.0.6",
   "repository": "https://github.com/whacked/schematized-config",
   "dependencies": {
-    "@types/jest": "^27.0.1",
-    "@types/json-schema": "^7.0.9",
-    "@types/node": "^16.9.1",
     "ajv": "^8.6.3",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "json-schema-to-typescript": "^10.1.5",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "yargs": "^17.5.1"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.1",
+    "@types/json-schema": "^7.0.9",
+    "@types/node": "^16.9.1",
     "jest": "^27.2.0",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8"
+  },
+  "bin": {
+    "check-env-with-schema": "dist/check-env-with-schema.js"
   },
   "scripts": {
     "test": "ts-jest",
