--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "schematized-config",
   "author": "whacked",
   "license": "MIT",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "repository": "https://github.com/whacked/schematized-config",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/src/index.js",
+      "require": "./dist/cjs/src/index.js"
+    }
+  },
   "dependencies": {
     "ajv": "^8.6.3",
+    "deepmerge": "^4.3.1",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "json-schema-to-typescript": "^10.1.5",
-    "typescript": "^4.4.3",
     "yargs": "^17.5.1"
   },
   "devDependencies": {
@@ -18,14 +24,14 @@
     "@types/node": "^16.9.1",
     "jest": "^27.2.0",
     "ts-jest": "^27.0.5",
-    "ts-node": "^10.2.1",
-    "ts-node-dev": "^1.1.8"
+    "tsx": "^4.19.1",
+    "typescript": "^4.4.3"
   },
   "bin": {
-    "check-env-with-schema": "dist/check-env-with-schema.js"
+    "check-env-with-schema": "./dist/cjs/src/check-env-with-schema.js"
   },
   "scripts": {
     "test": "ts-jest",
-    "build": "tsc"
+    "build": "tsc && tsc -p tsconfig.cjs.json && chmod +x dist/cjs/src/check-env-with-schema.js"
   }
 }
