--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
     "compilerOptions": {
+        "module": "ESNext",
         "composite": true,
         "declarationMap": true,
         "esModuleInterop": true,
         "resolveJsonModule": true,
-        "outDir": "dist",
-        "jsx": "react"
+        "moduleResolution": "Node",
+        "lib": ["ESNext", "DOM"],
+        "jsx": "react",
+        "outDir": "dist/esm"
     },
     "include": [
         "src/**/*",
