update package config for next publish, add LICENSE

--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
   "scripts": {
     "test": "ts-jest",
     "build": "tsc && tsc -p tsconfig.cjs.json && chmod +x dist/cjs/src/check-env-with-schema.js"
-  }
+  },
+  "files": [
+      "dist",
+      "README.md",
+      "LICENSE"
+  ]
 }
